src/test/ui/block-result/issue-3563.stderr
error[E0599]: no method named `b` found for type `&Self` in the current scope
  --> $DIR/issue-3563.rs:13:17
   |
13 |         || self.b()
   |                 ^
   |
   = help: did you mean `a`?

error: aborting due to previous error

